# anon-aadhaar-halo2

./: Cargo.toml  README.md  input_unpadded.json  rust-toolchain
.github/workflows/: ci.yml
solidity_verifier_contract/: contract.sol
src/: aadhaar_verifier_circuit.rs  chip.rs  conditional_secrets.rs  constants.rs  instructions.rs  lib.rs  nullifier.rs  qr_data_extractor.rs  signal.rs  sol_ver.rs  timestamp.rs
src/big_uint/: chip.rs  instructions.rs  mod.rs  utils.rs
src/extractors/: age_extractor.rs  extractor.rs  gender_extractor.rs  photo_extractor.rs  pincode_extractor.rs  qrdata_extractor.rs  timstamp_extractor.rs
