[package]
name = "anon-aadhaar-halo2"
version = "0.1.0"
edition = "2021"
authors = ["Hridam Basu"]
description = "RSA-SHA256 verification circuit in Halo2."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

#ahash = "0.7"
half = "2.2.0"
halo2-base = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git", rev = "9860acc" }
halo2curves = "0.6.0"
halo2-dynamic-sha256 = { git = "https://github.com/zkemail/halo2-dynamic-sha256.git", version = "0.1.0", branch = "main", optional = true }
halo2-ecc = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git", rev = "9860acc" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0" }
#halo2_solidity_verifier = {git = "https://github.com/privacy-scaling-explorations/halo2-solidity-verifier", branch = "main"}
#snark-verifier = {git = "https://github.com/privacy-scaling-explorations/snark-verifier", branch = "main"}
snark-verifier-sdk = { git = "https://github.com/privacy-scaling-explorations/snark-verifier"}
#snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier"}
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.15"
plonk = "0.0.0"
poseidon = {git = "https://github.com/privacy-scaling-explorations/poseidon.git", branch = "main"}
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["serde", "sha2"] }
sha2 = "0.10.6"
subtle = { version = "2.3", default-features = false }


[dev-dependencies]
criterion = "0.4"
rand_core = { version = "0.6", default-features = false }
paste = "1.0.7"

[features]
default = ["sha256"]
sha256 = ["halo2-dynamic-sha256"]
